# assimilate_rust

./: .gitignore  Cargo.toml  README.adoc  flake.nix  tree.txt
assets/: tree.txt
project_guessing_game/: Cargo.toml
project_hello_world/: Cargo.toml
project_rust/: Cargo.toml
project_rust/src/: main.rs
project_sample/: Cargo.toml  tree.txt
project_sample/data/: data.csv
src/tests/: main.rs  script_csv.rs
