workspace = { members = ["guessing_game"] }
[package]
name = "learn_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "0.14"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
ferris-says = "0.3.1"

[[bin]]
name = "script1"
path = "src/bin/script1.rs"

[[bin]]
name = "script2"
path = "src/bin/script2.rs"
